cloudformation/public.yaml
Resources:
  internetGateway:
    Type: AWS::EC2::InternetGateway
  attachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref internetGateway
  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  publicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref publicRouteTable
      SubnetId: !Ref publicSubnet
  publicRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - internetGateway
      - attachGateway
    Properties:
      RouteTableId: !Ref publicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetGateway
  publicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref publicSubnetCidrParameter
      VpcId: !Ref VPC
  publicSubnetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: publicSubnetSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: "0.0.0.0/0"
  bastion1:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        config:
          files:
            /home/ec2-user/MyKeyPair.pem:
              content: |
                -----BEGIN RSA PRIVATE KEY-----
                MIIEpQIBAAKCAQEAx4PUGuycCFe0G5CIgcaTtobXBHSE7CKkAxMTi+SzMhlcjNgOCOF15vfJj+Pv
[...]
                -----END RSA PRIVATE KEY-----
              mode: 400
              owner: "ec2-user"
              group: "ec2-user"
    Properties:
      InstanceType: !Ref InstanceTypeParameter
      ImageId: "ami-0c6b1d09930fac512"
      KeyName: !Ref keynameParameter
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet: [!Ref publicSubnetSecurityGroup]
          SubnetId: !Ref publicSubnet
      Tags:
        - Key: Type
          Value: Bastion
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash -xe
          yum update -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource bastion1 --region ${AWS::Region}
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource bastion1 --region ${AWS::Region}
